Migrate infra-unifi to a dedicated namespace

--- a/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/ingress.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: unifi
-  namespace: default
+  namespace: {{ unifi.namespace }}
   labels:
     app: unifi
   annotations:
