--- a/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/service-public.yaml.j2
+++ b/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/service-public.yaml.j2
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: unifi-frontend
-  namespace: default
+  namespace: {{ unifi.namespace }}
   labels:
     app: unifi
     app-component: unifi
