Migrate home-homeassistant to a dedicated namespace

--- a/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/mysql-service.yaml.j2
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/mysql-service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: homeassistant-mysql
-  namespace: default
+  namespace: {{ homeassistant.namespace }}
   labels:
     app: homeassistant
     app-component: mysql
