--- a/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/mysql-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/mysql-statefulSet.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: homeassistant-mysql
-  namespace: default
+  namespace: {{ homeassistant.namespace }}
   labels:
     app: homeassistant
     app-component: mysql
