--- a/ansible/install_applications/roles/home-nodered.prepare/app/prepare/flows.json.j2
+++ b/ansible/install_applications/roles/home-nodered.prepare/app/prepare/flows.json.j2
@@ -131,7 +131,7 @@
         "id": "7fc01d2e.5151fc",
         "type": "comment",
         "z": "5cf77e32.54a47",
-        "name": "Base URL : http://homeassistant",
+        "name": "Base URL : http://{{ homeassistant.servername }}",
         "info": "",
         "x": 470,
         "y": 120,
