--- a/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/ingress.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: homeassistant
-  namespace: default
+  namespace: {{ homeassistant.namespace }}
   labels:
     app: homeassistant
 spec:
