--- a/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/mysql-secret.yaml.j2
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/mysql-secret.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: homeassistant-mysql-pass
-  namespace: default
+  namespace: {{ homeassistant.namespace }}
   labels:
     app: homeassistant
     app-component: mysql
