Migrate home-nodered to a dedicated namespace

--- a/ansible/install_applications/roles/home-nodered.deploy/app/deploy/configMap.yaml.j2
+++ b/ansible/install_applications/roles/home-nodered.deploy/app/deploy/configMap.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nodered
-  namespace: default
+  namespace: {{ nodered.namespace }}
   labels:
     app: nodered
     app-component: nodered
