--- a/ansible/install_applications/roles/home-nodered.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/home-nodered.deploy/app/deploy/ingress.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: nodered
-  namespace: default
+  namespace: {{ nodered.namespace }}
   labels:
     app: nodered
 spec:
