--- a/ansible/install_applications/roles/home-nodered.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/home-nodered.deploy/app/deploy/service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nodered
-  namespace: default
+  namespace: {{ nodered.namespace }}
   labels:
     app: nodered
 spec:
