--- a/ansible/install_applications/roles/home-nodered.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home-nodered.deploy/app/deploy/statefulSet.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: nodered
-  namespace: default
+  namespace: {{ nodered.namespace }}
   labels:
     app: nodered
     app-component: nodered
