--- a/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/config-configMap.yaml.j2
+++ b/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/config-configMap.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mosquitto-config
-  namespace: default
+  namespace: {{ mosquitto.namespace }}
   labels:
     app: mosquitto
     app-component: mosquitto
