--- a/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/statefulSet.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: mosquitto
-  namespace: default
+  namespace: {{ mosquitto.namespace }}
   labels:
     app: mosquitto
     app-component: mosquitto
