--- a/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/secret-certs.yaml.j2
+++ b/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/secret-certs.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mosquitto-certs
-  namespace: default
+  namespace: {{ mosquitto.namespace }}
   labels:
     app: mosquitto
     app-component: mosquitto
