--- a/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mosquitto
-  namespace: default
+  namespace: {{ mosquitto.namespace }}
   labels:
     app: mosquitto
 spec:
