--- a/ansible/install_applications/roles/home-roomassistant.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/home-roomassistant.deploy/app/deploy/deployment.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: roomassistant
-  namespace: default
+  namespace: {{ roomassistant.namespace }}
   labels:
     app: roomassistant
     app-component: roomassistant
