Migrate stream-airsonic to a dedicated namespace

--- a/ansible/install_applications/roles/stream-airsonic.deploy/app/deploy/config-configMap.yaml.j2
+++ b/ansible/install_applications/roles/stream-airsonic.deploy/app/deploy/config-configMap.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: airsonic-config
-  namespace: default
+  namespace: {{ airsonic.namespace }}
   labels:
     app: airsonic
     app-component: airsonic
