--- a/ansible/install_applications/roles/stream-airsonic.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/stream-airsonic.deploy/app/deploy/statefulSet.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: airsonic
-  namespace: default
+  namespace: {{ airsonic.namespace }}
   labels:
     app: airsonic
     app-component: airsonic
