Migrate stream-plex to a dedicated namespace

--- a/ansible/install_applications/roles/stream-plex.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/stream-plex.deploy/app/deploy/ingress.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: plex
-  namespace: default
+  namespace: {{ plex.namespace }}
   labels:
     app: plex
 spec:
