--- a/ansible/install_applications/roles/stream-plex.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/stream-plex.deploy/app/deploy/service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: plex
-  namespace: default
+  namespace: {{ plex.namespace }}
   labels:
     app: plex
     app-component: plex
