Migrate download-sickchill to a dedicated namespace

--- a/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/configMap.yaml.j2
+++ b/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/configMap.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: sickchill-config
-  namespace: default
+  namespace: {{ sickchill.namespace }}
   labels:
     app: sickchill
     app-component: sickchill
