--- a/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sickchill
-  namespace: default
+  namespace: {{ sickchill.namespace }}
   labels:
     app: sickchill
 spec:
