Migrate download-deluge to a dedicated namespace

--- a/ansible/install_applications/roles/download-deluge.deploy/app/deploy/configMap.yaml.j2
+++ b/ansible/install_applications/roles/download-deluge.deploy/app/deploy/configMap.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: deluge-config
-  namespace: default
+  namespace: {{ deluge.namespace }}
   labels:
     app: deluge
     app-component: deluge
