--- a/ansible/install_applications/roles/download-deluge.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-deluge.deploy/app/deploy/statefulset.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: deluge
-  namespace: default
+  namespace: {{ deluge.namespace }}
   labels:
     app: deluge
     app-component: deluge
