--- a/ansible/install_applications/roles/download-deluge.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/download-deluge.deploy/app/deploy/ingress.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: deluge
-  namespace: default
+  namespace: {{ deluge.namespace }}
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
     nginx.ingress.kubernetes.io/configuration-snippet: |
