--- a/ansible/install_applications/roles/download-deluge.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/download-deluge.deploy/app/deploy/service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: deluge
-  namespace: default
+  namespace: {{ deluge.namespace }}
   labels:
     app: deluge
 spec:
