Migrate download-pyload to a dedicated namespace

--- a/ansible/install_applications/roles/download-pyload.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-pyload.deploy/app/deploy/statefulset.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: pyload
-  namespace: default
+  namespace: {{ pyload.namespace }}
   labels:
     app: pyload
     app-component: pyload
