--- a/ansible/install_applications/roles/download-pyload.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/download-pyload.deploy/app/deploy/ingress.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: pyload
-  namespace: default
+  namespace: {{ pyload.namespace }}
 spec:
   tls:
     - hosts:
