--- a/ansible/install_applications/roles/download-pyload.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/download-pyload.deploy/app/deploy/service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pyload
-  namespace: default
+  namespace: {{ pyload.namespace }}
   labels:
     app: pyload
 spec:
