Migrate download-sabnzbd to a dedicated namespace

--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/config/autoProcessMedia_delta.cfg.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/config/autoProcessMedia_delta.cfg.j2
@@ -47,7 +47,7 @@
     ###### clientAgent - Supported clients: sabnzbd, nzbget
     clientAgent = sabnzbd
     ###### SabNZBD (You must edit this if you're using nzbToMedia.py with SabNZBD)
-    sabnzbd_host = sabnzbd.default
+    sabnzbd_host = {{ sabnzbd.servername }}
     sabnzbd_port = 80
     sabnzbd_apikey = {{ sabnzbd.api_key }}
     ###### Enter the default path to your default download directory (non-category downloads). this directory is protected by safe_mode.
