--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/configMap.yaml.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/configMap.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: sabnzbd-config
-  namespace: default
+  namespace: {{ sabnzbd.namespace }}
   labels:
     app: sabnzbd
     app-component: sabnzbd
