--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/ingress.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: sabnzbd
-  namespace: default
+  namespace: {{ sabnzbd.namespace }}
 spec:
   tls:
     - hosts:
