--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/statefulset.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: sabnzbd
-  namespace: default
+  namespace: {{ sabnzbd.namespace }}
   labels:
     app: sabnzbd
     app-component: sabnzbd
