--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sabnzbd
-  namespace: default
+  namespace: {{ sabnzbd.namespace }}
   labels:
     app: sabnzbd
 spec:
