--- a/ansible/install_applications/roles/download-sickchill.deploy/app/config/config_delta.ini.j2
+++ b/ansible/install_applications/roles/download-sickchill.deploy/app/config/config_delta.ini.j2
@@ -36,7 +36,7 @@ nzb_dir = /mnt/download/newsgroup/nzbFiles
 torrent_dir = /mnt/download/torrent/auto-load
 
 [SABnzbd]
-sab_host = http://sabnzbd.default:80/
+sab_host = http://{{ sabnzbd.servername }}:80/
 sab_apikey = {{ sabnzbd.api_key }}
 sab_username = {{ sabnzbd.user }}
 sab_password = {{ sabnzbd.password }}
