--- a/ansible/install_applications/roles/_base.deploy/templates/namespace/namespace.yaml.j2
+++ b/ansible/install_applications/roles/_base.deploy/templates/namespace/namespace.yaml.j2
@@ -2,3 +2,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: {{ application_namespace }}
+  labels:
+    # we need a label for NetworkPolicy namespaceSelector
+    name: {{ application_namespace }}
