Add NetworkPolicy for auth-phpldapadmin

--- a/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/deployment.yaml.j2
@@ -26,7 +26,8 @@ spec:
       - image: "{{ phpldapadmin.container.image }}"
         name: phpldapadmin
         ports:
-          - containerPort: 80
+          - name: http
+            containerPort: 80
         resources:
           requests:
             cpu: "{{ phpldapadmin.container.requests_cpu }}"
