Fix docker registry network policy to allow prometheus

--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/networkPolicies.yaml.j2
@@ -29,3 +29,15 @@ spec:
 #        matchLabels:
 #          app: docker-registry-ui
 #          app-component: docker-registry-ui
+
+    # Allow debug from prometheus
+    - ports:
+        - port: debug
+      from:
+        - namespaceSelector:
+            matchLabels:
+              name: {{ prometheus.namespace }}
+          podSelector:
+            matchLabels:
+              app: prometheus
+              prometheus: k8s
