Add NetworkPolicy for infra-unifi

--- a/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/service-private.yaml.j2
+++ b/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/service-private.yaml.j2
@@ -19,12 +19,12 @@ spec:
     targetPort: 3478
     protocol: UDP
   # Port used for device and controller communication.
-  - name: http-controller
+  - name: http-crtl
     port: 8080
     targetPort: 8080
     protocol: TCP
   # Port used for controller GUI/API as seen in a web browser
-  - name: https-controller
+  - name: https-crtl
     port: 8443
     targetPort: 8443
   # Port used for HTTP portal redirection.
