Fix lost grafana target in prometheus

--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/networkPolicies.yaml.j2
@@ -14,13 +14,22 @@ spec:
       app-component: grafana
 
   ingress:
-    # Allow from the ingress controller
     - ports:
         - port: http
       from:
+        # Allow from the ingress controller
         - namespaceSelector:
             matchLabels:
               app.kubernetes.io/name: ingress-nginx
           podSelector:
             matchLabels:
               app.kubernetes.io/name: ingress-nginx
+
+        # Allow from prometheus
+        - namespaceSelector:
+            matchLabels:
+              name: {{ prometheus.namespace }}
+          podSelector:
+            matchLabels:
+              app: prometheus
+              prometheus: k8s
