Fix lost kube-state-metrics target in prometheus

--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/networkPolicies.yaml.j2
@@ -17,6 +17,7 @@ spec:
     # Allow from prometheus
     - ports:
         - port: https-main
+        - port: https-self
       from:
         - namespaceSelector:
             matchLabels:
