Fix lost alertmanager target in prometheus

--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/networkPolicies.yaml.j2
@@ -15,13 +15,22 @@ spec:
       alertmanager: main
 
   ingress:
-    # Allow from the ingress controller
     - ports:
         - port: web
       from:
+        # Allow from the ingress controller
         - namespaceSelector:
             matchLabels:
               app.kubernetes.io/name: ingress-nginx
           podSelector:
             matchLabels:
               app.kubernetes.io/name: ingress-nginx
+
+        # Allow from prometheus
+        - namespaceSelector:
+            matchLabels:
+              name: {{ prometheus.namespace }}
+          podSelector:
+            matchLabels:
+              app: prometheus
+              prometheus: k8s
