Clean labels for infra-zonemta

--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongodb-secret-pass.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongodb-secret-pass.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: zonemta-mongo-pass
   namespace: "{{ zonemta.namespace }}"
   labels:
-    app.kubernetes.io/name: zonemta
-    app.kubernetes.io/component: mongo
+    {{ zonemta_mongo.labels_def | to_nice_yaml() | indent(4) }}
+    {{ zonemta_mongo.labels_desc | to_nice_yaml() | indent(4) }}
 type: Opaque
 data:
   password: {{ zonemta_mongo.root_password | b64encode }}
