--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-secret-certificates.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-secret-certificates.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: zonemta-certificates
   namespace: "{{ zonemta.namespace }}"
   labels:
-    app.kubernetes.io/name: zonemta
-    app.kubernetes.io/component: zonemta
+    {{ zonemta.labels_def | to_nice_yaml() | indent(4) }}
+    {{ zonemta.labels_desc | to_nice_yaml() | indent(4) }}
 data:
 {% for zonemta_generated_certificate_file in zonemta_generated_certificate_files.results %}
   {{ zonemta_generated_certificate_file.source | basename }}: {{ zonemta_generated_certificate_file.content }}
