--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-service.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-service.yaml.j2
@@ -4,12 +4,12 @@ metadata:
   name: zonemta
   namespace: "{{ zonemta.namespace }}"
   labels:
-    app.kubernetes.io/name: zonemta
+    {{ zonemta.labels_def | to_nice_yaml() | indent(4) }}
+    {{ zonemta.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   ports:
   - port: 587
     targetPort: 1587
     name: smtp
   selector:
-    app.kubernetes.io/name: zonemta
-    app.kubernetes.io/component: zonemta
+    {{ zonemta.labels_def | to_nice_yaml() | indent(4) }}
