--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-service.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-service.yaml.j2
@@ -4,11 +4,11 @@ metadata:
   name: zonemta-mongo
   namespace: "{{ zonemta.namespace }}"
   labels:
-    app.kubernetes.io/name: zonemta
+    {{ zonemta_mongo.labels_def | to_nice_yaml() | indent(4) }}
+    {{ zonemta_mongo.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   ports:
   - port: 27017
     name: mongo
   selector:
-    app.kubernetes.io/name: zonemta
-    app.kubernetes.io/component: mongo
+    {{ zonemta_mongo.labels_def | to_nice_yaml() | indent(4) }}
