--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-statefulSet.yaml.j2
@@ -4,26 +4,25 @@ metadata:
   name: zonemta-mongo
   namespace: "{{ zonemta.namespace }}"
   labels:
-    app.kubernetes.io/name: zonemta
-    app.kubernetes.io/component: mongo
+    {{ zonemta_mongo.labels_def | to_nice_yaml() | indent(4) }}
+    {{ zonemta_mongo.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: zonemta
-      app.kubernetes.io/component: mongo
+      {{ zonemta_mongo.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: zonemta
-        app.kubernetes.io/component: mongo
+        {{ zonemta_mongo.labels_def | to_nice_yaml() | indent(8) }}
+        {{ zonemta_mongo.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
-      - image: "{{ zonemta_mongo.container.image }}"
-        name: mongo
+      - name: mongo
+        image: "{{ zonemta_mongo.container.image }}"
         env:
         - name: MONGO_INITDB_ROOT_USERNAME
           value: {{ zonemta_mongo.root_user }}
@@ -71,5 +70,4 @@ spec:
           storage: 512M
       selector:
         matchLabels:
-          app.kubernetes.io/name: zonemta
-          app.kubernetes.io/component: mongo
+          {{ zonemta_mongo.labels_def | to_nice_yaml() | indent(10) }}
