--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,14 +4,14 @@ metadata:
   name: allow-to-mongodb
   namespace: {{ zonemta.namespace }}
   labels:
-    app.kubernetes.io/name: zonemta
+    {{ zonemta_mongo.labels_def | to_nice_yaml() | indent(4) }}
+    {{ zonemta_mongo.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: zonemta
-      app.kubernetes.io/component: mongo
+      {{ zonemta_mongo.labels_def | to_nice_yaml() | indent(4) }}
 
   ingress:
     # Allow from zonemta
@@ -20,8 +20,8 @@ spec:
       from:
         - podSelector:
             matchLabels:
-              app.kubernetes.io/name: zonemta
-              app.kubernetes.io/component: zonemta
+              {{ zonemta.labels_def | to_nice_yaml() | indent(14) }}
+              {{ zonemta.labels_desc | to_nice_yaml() | indent(14) }}
 
 ---
 
@@ -31,14 +31,14 @@ metadata:
   name: allow-to-redis
   namespace: {{ zonemta.namespace }}
   labels:
-    app.kubernetes.io/name: zonemta
+    {{ zonemta_redis.labels_def | to_nice_yaml() | indent(4) }}
+    {{ zonemta_redis.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: zonemta
-      app.kubernetes.io/component: redis
+      {{ zonemta_redis.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow from zonemta
@@ -47,8 +47,7 @@ spec:
       from:
         - podSelector:
             matchLabels:
-              app.kubernetes.io/name: zonemta
-              app.kubernetes.io/component: zonemta
+              {{ zonemta.labels_def | to_nice_yaml() | indent(14) }}
 
 ---
 
@@ -58,14 +57,14 @@ metadata:
   name: allow-to-zonemta
   namespace: {{ zonemta.namespace }}
   labels:
-    app.kubernetes.io/name: zonemta
+    {{ zonemta.labels_def | to_nice_yaml() | indent(4) }}
+    {{ zonemta.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: zonemta
-      app.kubernetes.io/component: zonemta
+      {{ zonemta.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow smtp from all
