--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/redis-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/redis-statefulSet.yaml.j2
@@ -4,24 +4,23 @@ metadata:
   name: zonemta-redis
   namespace: "{{ zonemta.namespace }}"
   labels:
-    app.kubernetes.io/name: zonemta
-    app.kubernetes.io/component: redis
+    {{ zonemta_redis.labels_def | to_nice_yaml() | indent(4) }}
+    {{ zonemta_redis.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: zonemta
-      app.kubernetes.io/component: redis
+      {{ zonemta_redis.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: zonemta
-        app.kubernetes.io/component: redis
+        {{ zonemta_redis.labels_def | to_nice_yaml() | indent(8) }}
+        {{ zonemta_redis.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
-      - image: "{{ zonemta_redis.container.image }}"
-        name: redis
+      - name: redis
+        image: "{{ zonemta_redis.container.image }}"
         command:
         - redis-server
         - "--requirepass {{ zonemta_redis.password }}"
@@ -57,5 +56,4 @@ spec:
           storage: 32M
       selector:
         matchLabels:
-          app.kubernetes.io/name: zonemta
-          app.kubernetes.io/component: redis
+          {{ zonemta_redis.labels_def | to_nice_yaml() | indent(10) }}
