--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-deployment.yaml.j2
@@ -1,29 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: zonemta
+  name: zonemta-server
   namespace: "{{ zonemta.namespace }}"
   labels:
-    app.kubernetes.io/name: zonemta
-    app.kubernetes.io/component: zonemta
+    {{ zonemta.labels_def | to_nice_yaml() | indent(4) }}
+    {{ zonemta.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: zonemta
-      app.kubernetes.io/component: zonemta
+      {{ zonemta.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: zonemta
-        app.kubernetes.io/component: zonemta
+        {{ zonemta.labels_def | to_nice_yaml() | indent(8) }}
+        {{ zonemta.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
-      - image: "{{ zonemta.container.image }}"
-        name: zonemta
+      - name: zonemta
+        image: "{{ zonemta.container.image }}"
         env:
         - name: NODE_OPTIONS
           value: "--max-old-space-size={{ zonemta.nodejs_max_memory }}"
