--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/secret-certs.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/secret-certs.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: docker-registry-certs
   namespace: {{ docker_registry.namespace }}
   labels:
-    app.kubernetes.io/name: docker-registry
-    app.kubernetes.io/component: registry
+    {{ docker_registry.labels_def | to_nice_yaml() | indent(4) }}
+    {{ docker_registry.labels_desc | to_nice_yaml() | indent(4) }}
 data:
 {% for docker_registry_generated_certificate_file in docker_registry_generated_certificate_files.results %}
   {{ docker_registry_generated_certificate_file.source | basename }}: {{ docker_registry_generated_certificate_file.content }}
