--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,14 +4,14 @@ metadata:
   name: allow-to-docker-registry
   namespace: {{ docker_registry.namespace }}
   labels:
-    app.kubernetes.io/name: docker-registry
+    {{ docker_registry.labels_def | to_nice_yaml() | indent(4) }}
+    {{ docker_registry.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: docker-registry
-      app.kubernetes.io/component: registry
+      {{ docker_registry.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow from everywhere
