--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/service-debug.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/service-debug.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: docker-registry-debug
   namespace: {{ docker_registry.namespace }}
   labels:
-    app.kubernetes.io/name: docker-registry
-    app.kubernetes.io/component: registry
+    {{ docker_registry.labels_def | to_nice_yaml() | indent(4) }}
+    {{ docker_registry.labels_desc | to_nice_yaml() | indent(4) }}
     prometheus-target: docker-registry
 spec:
   ports:
@@ -13,5 +13,4 @@ spec:
       name: debug
       targetPort: 5001
   selector:
-    app.kubernetes.io/name: docker-registry
-    app.kubernetes.io/component: registry
+    {{ docker_registry.labels_def | to_nice_yaml() | indent(4) }}
