--- a/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/deploy/deployment.yaml.j2
@@ -4,22 +4,21 @@ metadata:
   name: docker-registry-ui
   namespace: {{ docker_registry_ui.namespace }}
   labels:
-    app.kubernetes.io/name: docker-registry-ui
-    app.kubernetes.io/component: docker-registry-ui
+    {{ docker_registry_ui.labels_def | to_nice_yaml() | indent(4) }}
+    {{ docker_registry_ui.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: docker-registry-ui
-      app.kubernetes.io/component: docker-registry-ui
+      {{ docker_registry_ui.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: docker-registry-ui
-        app.kubernetes.io/component: docker-registry-ui
+        {{ docker_registry_ui.labels_def | to_nice_yaml() | indent(8) }}
+        {{ docker_registry_ui.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - image: "{{ docker_registry_ui.container.image }}"
