Clean labels for infra-kubernetes-metrics-server

--- a/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/serviceAccount.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/serviceAccount.yaml.j2
@@ -4,3 +4,6 @@ kind: ServiceAccount
 metadata:
   name: metrics-server
   namespace: {{ kubernetes_metrics_server.namespace }}
+  labels:
+    {{ kubernetes_metrics_server.labels_def | to_nice_yaml() | indent(4) }}
+    {{ kubernetes_metrics_server.labels_desc | to_nice_yaml() | indent(4) }}
