--- a/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/metrics-server-deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/metrics-server-deployment.yaml.j2
@@ -5,16 +5,18 @@ metadata:
   name: metrics-server
   namespace: {{ kubernetes_metrics_server.namespace }}
   labels:
-    app.kubernetes.io/name: metrics-server
+    {{ kubernetes_metrics_server.labels_def | to_nice_yaml() | indent(4) }}
+    {{ kubernetes_metrics_server.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: metrics-server
+      {{ kubernetes_metrics_server.labels_def | to_nice_yaml() | indent(6) }}
   template:
     metadata:
       name: metrics-server
       labels:
-        app.kubernetes.io/name: metrics-server
+        {{ kubernetes_metrics_server.labels_def | to_nice_yaml() | indent(8) }}
+        {{ kubernetes_metrics_server.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       serviceAccountName: metrics-server
       volumes:
