--- a/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/metrics-server-service.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/metrics-server-service.yaml.j2
@@ -5,11 +5,12 @@ metadata:
   name: metrics-server
   namespace: {{ kubernetes_metrics_server.namespace }}
   labels:
-    kubernetes.io/name: "Metrics-server"
+    {{ kubernetes_metrics_server.labels_def | to_nice_yaml() | indent(4) }}
+    {{ kubernetes_metrics_server.labels_desc | to_nice_yaml() | indent(4) }}
     kubernetes.io/cluster-service: "true"
 spec:
   selector:
-    app.kubernetes.io/name: metrics-server
+    {{ kubernetes_metrics_server.labels_def | to_nice_yaml() | indent(4) }}
   ports:
   - port: 443
     protocol: TCP
