--- a/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,13 +4,14 @@ metadata:
   name: allow-to-metrics-server
   namespace: {{ kubernetes_metrics_server.namespace }}
   labels:
-    app.kubernetes.io/name: metrics-server
+    {{ kubernetes_metrics_server.labels_def | to_nice_yaml() | indent(4) }}
+    {{ kubernetes_metrics_server.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: metrics-server
+      {{ kubernetes_metrics_server.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow from everywhere
