--- a/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,13 +4,14 @@ metadata:
   name: allow-to-dashboard-metrics-scraper
   namespace: {{ kubernetes_dashboard.namespace }}
   labels:
-    app.kubernetes.io/name: kubernetes-dashboard
+    {{ kubernetes_dashboard_metrics_scraper.labels_def | to_nice_yaml() | indent(4) }}
+    {{ kubernetes_dashboard_metrics_scraper.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: dashboard-metrics-scraper
+      {{ kubernetes_dashboard_metrics_scraper.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow from kubernetes-dashboard
@@ -19,7 +20,7 @@ spec:
       from:
         - podSelector:
             matchLabels:
-              app.kubernetes.io/name: kubernetes-dashboard
+              {{ kubernetes_dashboard.labels_def | to_nice_yaml() | indent(14) }}
 
 ---
 
@@ -29,13 +30,14 @@ metadata:
   name: allow-to-kubernetes-dashboard
   namespace: {{ kubernetes_dashboard.namespace }}
   labels:
-    app.kubernetes.io/name: kubernetes-dashboard
+    {{ kubernetes_dashboard.labels_def | to_nice_yaml() | indent(4) }}
+    {{ kubernetes_dashboard.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: kubernetes-dashboard
+      {{ kubernetes_dashboard.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow from the ingress controller
