--- a/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/serviceAccount.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/serviceAccount.yaml.j2
@@ -3,3 +3,6 @@ kind: ServiceAccount
 metadata:
   name: dashboard-admin-user
   namespace: {{ kubernetes_dashboard.namespace }}
+  labels:
+    {{ kubernetes_dashboard.labels_def | to_nice_yaml() | indent(4) }}
+    {{ kubernetes_dashboard.labels_desc | to_nice_yaml() | indent(4) }}
