Clean labels for infra-reloader

--- a/ansible/install_applications/roles/infra-reloader.deploy/app/deploy/serviceAccount.yaml.j2
+++ b/ansible/install_applications/roles/infra-reloader.deploy/app/deploy/serviceAccount.yaml.j2
@@ -4,5 +4,5 @@ metadata:
   name: reloader
   namespace: {{ reloader.namespace }}
   labels:
-    app.kubernetes.io/name: reloader
-
+    {{ reloader.labels_def | to_nice_yaml() | indent(4) }}
+    {{ reloader.labels_desc | to_nice_yaml() | indent(4) }}
