--- a/ansible/install_applications/roles/infra-reloader.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-reloader.deploy/app/deploy/deployment.yaml.j2
@@ -4,20 +4,19 @@ metadata:
   name: reloader
   namespace: {{ reloader.namespace }}
   labels:
-    app.kubernetes.io/name: reloader
-    app.kubernetes.io/component: reloader
+    {{ reloader.labels_def | to_nice_yaml() | indent(4) }}
+    {{ reloader.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   replicas: 1
   revisionHistoryLimit: 2
   selector:
     matchLabels:
-      app.kubernetes.io/name: reloader
-      app.kubernetes.io/component: reloader
+      {{ reloader.labels_def | to_nice_yaml() | indent(6) }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: reloader
-        app.kubernetes.io/component: reloader
+        {{ reloader.labels_def | to_nice_yaml() | indent(8) }}
+        {{ reloader.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - name: reloader
